BruteFIR v1.1.1                                                 January 18, 2026
        * Fix (old) bug that muting with interleaved buffers and 24 bit sample
          formats did not work correctly due to stepping only one byte instead
          of three between channels.
        * Fix for a similar problem as above for delay buffers with 24 bit
          sample size.

BruteFIR v1.1.0                                                November 23, 2025
        * The original fork()-based multi-process architecture has been
          minimally updated to use pthreads instead, which makes it more
          compatible with modern sound servers.
        * Change versioning system to major.minor.patch.
        * Change license from GPL to ISC License (ISC) to make it easier
          to use in commercial projects.
        * New I/O module: PipeWire I/O.
        * Use XDG_CONFIG_HOME and XDG_CACHE_CONFIG ~/.config/ and ~/.cache/
          for default config and FFTW wisdom respectively.
        * Add optional SINGLE_MOD_PATH compile flag to lock modules path to
          one directory (like /usr/lib/brutefir), which is recommended when
          building a package for a Linux distro.
        * ALSA I/O: add support for mmap modes.
        * ALSA I/O: add "access" option to ALSA I/O module to force a
          specific access mode, often necessary with the ALSA Loopback driver.
        * ALSA I/O: switch input devices to input mode if they falsely always
          report data available (PipeWire/virtual device workaround).
        * ALSA I/O: better error messages for incompatible parameters.
        * Very minor changes to integration APIs due to threaded model.
        * Make code C99 compliant (with a bit of POSIX).
        * JACK I/O: print error message for dynamic buffer sizes.
        * Remove Sparc/SunOS and FreeBSD-specific code.
        * Remove obsolete OSS I/O module.
        * Fix minor dither bug.
