@@ -74,6 +74,10 @@
 <p>
 
 <h2 id="news">News</h2>
+<p><strong>2026-01-20</strong><br>
+  Release 1.1.2, fixed a sloppy mistake made in the v1.1.1 24 bit mute
+  bug fix.
+</p>
 <p><strong>2026-01-18</strong><br>
   Release 1.1.1, fixed a couple of super-old bugs related to muting
   and delaying devices with 24 bit (3 byte) samples.
@@ -171,7 +175,7 @@
 
 <h2 id="download">Download</h2>
 <p>
-  You are free to <a href="files/brutefir-1.1.1.tar.gz">download version 1.1.1</a>.
+  You are free to <a href="files/brutefir-1.1.2.tar.gz">download version 1.1.2</a>.
 </p>
 <p>
   For reference, the soruce code is also
