@@ -1,3 +1,6 @@
+BruteFIR v1.1.2                                                 January 20, 2026
+        * Fix the fix, sloppy mistake in v1.1.1 24 bit mute fix.
+
 BruteFIR v1.1.1                                                 January 18, 2026
         * Fix (old) bug that muting with interleaved buffers and 24 bit sample
           formats did not work correctly due to stepping only one byte instead
